stuff/prod/k8s/argocd/overlays/production/argo-cd-repo-server-ksops-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
        - name: custom-tools
          emptyDir: {}
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /.config/kustomize/plugin/goabout.com/v1beta1/sopssecretgenerator/SopsSecretGenerator
              name: custom-tools
              subPath: SopsSecretGenerator
